--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-datetime": "^2.14.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
