--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "react": "^16.4.1",
     "react-datetime": "^2.14.0",
     "react-dom": "^16.4.1",
+    "react-dropzone": "^4.2.13",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "superagent": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
