--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dropzone": "^4.2.13",
+    "request-promise": "^4.2.2",
     "superagent": "^3.8.3"
   }
 }
