--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "toastify": "^1.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
