--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "node-fetch": "^2.2.0",
-    "react": "^16.4.1",
-    "react-dropzone": "^4.2.13",
-    "request-promise": "^4.2.2",
-    "superagent": "^3.8.3"
+    "jsonwebtoken": "^8.2.2",
+    "mongoose": "^5.1.4",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "validator": "^10.3.0"
   }
 }
