--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.2",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.1.4",
