--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^8.2.2",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.1.4",
+    "node-twitter-api": "^1.8.0",
+    "oauth": "^0.9.15",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.3.0"
