--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.2.2",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.1.4",
+    "multer": "^1.4.1",
     "node-twitter-api": "^1.8.0",
     "oauth": "^0.9.15",
     "passport": "^0.4.0",
