--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://riidlfbproject.herokuapp.com",
   "browserslist": [
     ">0.2%",
     "not dead",
